[package]
name = "fingerprunk"
version = "0.1.0"
authors = ["Niklas Elsbrock <mail@nelsbrock.de>"]
edition = "2024"
description = "CLI tool for brute-forcing OpenPGP keys with cool fingerprints"
repository = "https://github.com/nelsbrock/fingerprunk"
license = "GPL-3.0-or-later"
keywords = ["fingerprint", "openpgp", "bruteforce"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
fancy-regex = "0.16.2"
num-integer = "0.1.46"
num_cpus = "1.17.0"
rpassword = "7.4.0"
sequoia-openpgp = "2.0.0"
